[package]
name = "alterware-launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
blake3 = "1.5"
chrono = "0.4"
futures-util = "0.3"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-log = "2.1"
tokio = { version = "1.43", features = ["full"] }
strum = "0.26"
strum_macros = "0.26"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["d3d11"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", default-features = false, features = ["vendored"] }

[build-dependencies]
static_vcruntime = "2.0"