[package]
name = "alterware-launcher"
version = "0.10.1"
edition = "2021"
build = "res/build.rs"

[profile.release]
opt-level = "s"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
rand = "0.8.5"
semver = "1.0.24"
colored = "3.0.0"
once_cell = "1.20.2"
reqwest = { version = "0.12.7", features = ["stream"] }
futures-util = "0.3.31"
indicatif = "0.17.9"
tokio = {version="1.43.0", features = ["rt-multi-thread", "macros"]}
simple-log = "2.1.1"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.70", default-features = false, features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
steamlocate = "=2.0.0"
mslnk = "0.1.8"
self-replace = "1.5.0"
runas = "1.2.0"

[build-dependencies]
winresource = "0.1.19"
static_vcruntime = "2.0"

[dev-dependencies]
strip-ansi-escapes = "0.2.0"
serial_test = "3.2.0"

[package.metadata.winresource]
OriginalFilename = "alterware-launcher.exe"
FileDescription = "AlterWare Launcher"
ProductName = "github.com/mxve/alterware-launcher"
