[package]
name = "alterware-launcher"
version = "0.10.5"
edition = "2021"
build = "res/build.rs"

[profile.release]
opt-level = "s"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.8.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
semver = "1.0.25"
colored = "3.0.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["stream"] }
futures-util = "0.3.31"
indicatif = "0.17.11"
tokio = { version="1.43.0", features = ["rt-multi-thread", "macros"] }
simple-log = "2.3.0"
walkdir = "2.5"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.71", default-features = false, features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
# todo: update to 2.0.x; needs testing on windows
steamlocate = "=2.0.0-beta.2"
mslnk = "0.1.8"
self-replace = "1.5.0"
runas = "1.2.0"

[build-dependencies]
winresource = "0.1.19"
static_vcruntime = "2.0"

[dev-dependencies]
strip-ansi-escapes = "0.2.1"
serial_test = "3.2.0"

[package.metadata.winresource]
OriginalFilename = "alterware-launcher.exe"
FileDescription = "AlterWare Launcher"
ProductName = "github.com/mxve/alterware-launcher"
